--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "mysql2": "^3.13.0",
     "os": "^0.1.2",
-    "pg": "^8.14.1"
+    "pg": "^8.14.1",
+    "uuid": "^11.1.0"
   }
 }
